testsuite/tests/indexed-types/should_fail/T9357.stderr

T9357.hs:7:15: error:
    • Illegal unlifted type: Int#
    • In the type instance declaration for ‘F’

T9357.hs:8:15: error:
    • Illegal polymorphic type: forall a. a -> a
    • In the type instance declaration for ‘F’
